Fixed error box using wrong font

--- a/app/ui/elements/login/css/loginForm.module.css
+++ b/app/ui/elements/login/css/loginForm.module.css
@@ -492,7 +492,6 @@
 .errorBoxText
 {
   color           : rgb(0, 47, 52);
-  font-family     : Geomanist, sans-serif;
   font-weight     : 400;
   text-decoration : none;
   font-size       : 14px;
